libqt6c/src/libqtextformat.hpp

typedef struct QBrush QBrush;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextTableCellFormat QTextTableCellFormat;
int QTextFrameFormat_BorderStyle(const QTextFrameFormat* self);
QTextTableCellFormat* QTextTableCellFormat_new();
bool QTextTableCellFormat_IsValid(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetTopPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_TopPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBottomPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_BottomPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetLeftPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_LeftPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetRightPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_RightPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetPadding(QTextTableCellFormat* self, double padding);
void QTextTableCellFormat_SetTopBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_TopBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBottomBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_BottomBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetLeftBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_LeftBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetRightBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_RightBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBorder(QTextTableCellFormat* self, double width);
void QTextTableCellFormat_SetTopBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_TopBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBottomBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_BottomBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetLeftBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_LeftBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetRightBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_RightBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBorderStyle(QTextTableCellFormat* self, int style);
void QTextTableCellFormat_SetTopBorderBrush(QTextTableCellFormat* self, const QBrush* brush);
QBrush* QTextTableCellFormat_TopBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBottomBorderBrush(QTextTableCellFormat* self, const QBrush* brush);
QBrush* QTextTableCellFormat_BottomBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetLeftBorderBrush(QTextTableCellFormat* self, const QBrush* brush);
QBrush* QTextTableCellFormat_LeftBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetRightBorderBrush(QTextTableCellFormat* self, const QBrush* brush);
QBrush* QTextTableCellFormat_RightBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_SetBorderBrush(QTextTableCellFormat* self, const QBrush* brush);
void QTextTableCellFormat_Delete(QTextTableCellFormat* self);