QtBeef/src/Qt/qtextformat.bf

extension CQt
{
	[LinkName("QTextTableCellFormat_new")]
	public static extern QTextTableCellFormat_Ptr QTextTableCellFormat_new();
	[LinkName("QTextTableCellFormat_Delete")]
	public static extern void QTextTableCellFormat_Delete(QTextTableCellFormat_Ptr self);
	[LinkName("QTextTableCellFormat_IsValid")]
	public static extern bool QTextTableCellFormat_IsValid(void* self);
	[LinkName("QTextTableCellFormat_SetTopPadding")]
	public static extern void QTextTableCellFormat_SetTopPadding(void* self, double padding);
	[LinkName("QTextTableCellFormat_TopPadding")]
	public static extern double QTextTableCellFormat_TopPadding(void* self);
	[LinkName("QTextTableCellFormat_SetBottomPadding")]
	public static extern void QTextTableCellFormat_SetBottomPadding(void* self, double padding);
	[LinkName("QTextTableCellFormat_BottomPadding")]
	public static extern double QTextTableCellFormat_BottomPadding(void* self);
	[LinkName("QTextTableCellFormat_SetLeftPadding")]
	public static extern void QTextTableCellFormat_SetLeftPadding(void* self, double padding);
	[LinkName("QTextTableCellFormat_LeftPadding")]
	public static extern double QTextTableCellFormat_LeftPadding(void* self);
	[LinkName("QTextTableCellFormat_SetRightPadding")]
	public static extern void QTextTableCellFormat_SetRightPadding(void* self, double padding);
	[LinkName("QTextTableCellFormat_RightPadding")]
	public static extern double QTextTableCellFormat_RightPadding(void* self);
	[LinkName("QTextTableCellFormat_SetPadding")]
	public static extern void QTextTableCellFormat_SetPadding(void* self, double padding);
	[LinkName("QTextTableCellFormat_SetTopBorder")]
	public static extern void QTextTableCellFormat_SetTopBorder(void* self, double width);
	[LinkName("QTextTableCellFormat_TopBorder")]
	public static extern double QTextTableCellFormat_TopBorder(void* self);
	[LinkName("QTextTableCellFormat_SetBottomBorder")]
	public static extern void QTextTableCellFormat_SetBottomBorder(void* self, double width);
	[LinkName("QTextTableCellFormat_BottomBorder")]
	public static extern double QTextTableCellFormat_BottomBorder(void* self);
	[LinkName("QTextTableCellFormat_SetLeftBorder")]
	public static extern void QTextTableCellFormat_SetLeftBorder(void* self, double width);
	[LinkName("QTextTableCellFormat_LeftBorder")]
	public static extern double QTextTableCellFormat_LeftBorder(void* self);
	[LinkName("QTextTableCellFormat_SetRightBorder")]
	public static extern void QTextTableCellFormat_SetRightBorder(void* self, double width);
	[LinkName("QTextTableCellFormat_RightBorder")]
	public static extern double QTextTableCellFormat_RightBorder(void* self);
	[LinkName("QTextTableCellFormat_SetBorder")]
	public static extern void QTextTableCellFormat_SetBorder(void* self, double width);
	[LinkName("QTextTableCellFormat_SetTopBorderStyle")]
	public static extern void QTextTableCellFormat_SetTopBorderStyle(void* self, QTextFrameFormat_BorderStyle style);
	[LinkName("QTextTableCellFormat_TopBorderStyle")]
	public static extern QTextFrameFormat_BorderStyle QTextTableCellFormat_TopBorderStyle(void* self);
	[LinkName("QTextTableCellFormat_SetBottomBorderStyle")]
	public static extern void QTextTableCellFormat_SetBottomBorderStyle(void* self, QTextFrameFormat_BorderStyle style);
	[LinkName("QTextTableCellFormat_BottomBorderStyle")]
	public static extern QTextFrameFormat_BorderStyle QTextTableCellFormat_BottomBorderStyle(void* self);
	[LinkName("QTextTableCellFormat_SetLeftBorderStyle")]
	public static extern void QTextTableCellFormat_SetLeftBorderStyle(void* self, QTextFrameFormat_BorderStyle style);
	[LinkName("QTextTableCellFormat_LeftBorderStyle")]
	public static extern QTextFrameFormat_BorderStyle QTextTableCellFormat_LeftBorderStyle(void* self);
	[LinkName("QTextTableCellFormat_SetRightBorderStyle")]
	public static extern void QTextTableCellFormat_SetRightBorderStyle(void* self, QTextFrameFormat_BorderStyle style);
	[LinkName("QTextTableCellFormat_RightBorderStyle")]
	public static extern QTextFrameFormat_BorderStyle QTextTableCellFormat_RightBorderStyle(void* self);
	[LinkName("QTextTableCellFormat_SetBorderStyle")]
	public static extern void QTextTableCellFormat_SetBorderStyle(void* self, QTextFrameFormat_BorderStyle style);
	[LinkName("QTextTableCellFormat_SetTopBorderBrush")]
	public static extern void QTextTableCellFormat_SetTopBorderBrush(void* self, void** brush);
	[LinkName("QTextTableCellFormat_TopBorderBrush")]
	public static extern void* QTextTableCellFormat_TopBorderBrush(void* self);
	[LinkName("QTextTableCellFormat_SetBottomBorderBrush")]
	public static extern void QTextTableCellFormat_SetBottomBorderBrush(void* self, void** brush);
	[LinkName("QTextTableCellFormat_BottomBorderBrush")]
	public static extern void* QTextTableCellFormat_BottomBorderBrush(void* self);
	[LinkName("QTextTableCellFormat_SetLeftBorderBrush")]
	public static extern void QTextTableCellFormat_SetLeftBorderBrush(void* self, void** brush);
	[LinkName("QTextTableCellFormat_LeftBorderBrush")]
	public static extern void* QTextTableCellFormat_LeftBorderBrush(void* self);
	[LinkName("QTextTableCellFormat_SetRightBorderBrush")]
	public static extern void QTextTableCellFormat_SetRightBorderBrush(void* self, void** brush);
	[LinkName("QTextTableCellFormat_RightBorderBrush")]
	public static extern void* QTextTableCellFormat_RightBorderBrush(void* self);
	[LinkName("QTextTableCellFormat_SetBorderBrush")]
	public static extern void QTextTableCellFormat_SetBorderBrush(void* self, void** brush);
}
